cabal-version:       3.0
name:                antikythera
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Scheduling
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Simple job/task/event scheduler/cronjob
description:         In-memory cronjob simple and flexible builder.
Homepage:            https://github.com/blackheaven/antikythera
tested-with:         GHC==9.6.6, GHC==9.8.4, GHC==9.10.1, GHC==9.12.1

library
  default-language:   Haskell2010
  build-depends:
      base == 4.*
    , time >= 1.9 && < 2
    , unbounded-delays == 0.1.*
  hs-source-dirs: src
  exposed-modules:
    Control.Antikythera.Periodicity
    Control.Antikythera.Scheduling
    Control.Antikythera.Unit.Time
    Control.Antikythera.Unit.Unit
    Control.Antikythera.Unit
    Control.Antikythera
  other-modules:
    Paths_antikythera
  autogen-modules:
    Paths_antikythera
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    OverloadedRecordDot
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite antikythera-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Paths_antikythera
  autogen-modules:
    Paths_antikythera
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    OverloadedRecordDot
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , antikythera
    , hspec
    , hspec-core
    , time
  default-language: Haskell2010
